<resources>
    <string name="app_name">APK Malware Agency</string>
    <string name="action_settings">Settings</string>

    <!--    Graph Labels -->
    <string name="apk_scan_label">APK Scan</string>
    <string name="about_us_label">About Us</string>
    <string name="database_label">Scan Logs</string>
    <string name="cpuInformation_label">CPU Information</string>
    <string name="details_file">View details</string>
    <string name="hardware_label">Hardware Monitor</string>
    <string name="cpu_monitoring_label">Hardware status</string>

    <!--    Scan APK fragment contents-->
    <string name="sc_file_name">File name:</string>
    <string name="scan_process">Scanning process</string>
    <string name="txt_scan">Scanning.....</string>
    <string name="let_scan">Select a file to scan</string>
    <string name="apk_image">apk image</string>
    <string name="view_details">View Details</string>
    <string name="view_log">View Logs</string>
    <string name="fileSelectorButton">Select and Scan File</string>
    <string name="uploadButton">Scan File</string>
    <string name="downloadButton">Click to View Results</string>
    <string name="clearButton">Click to Clear Database</string>
    <string name="deleteButton">Clear Results</string>


    <!--    Hardware status fragment contents -->
    <string name="hardware_status">Hardware Status</string>
    <string name="monitoring">Start Monitor</string>
    <string name="STORAGE">STORAGE</string>
    <string name="RAM">RAM</string>
    <string name="TOTAL_CPU">CPU Information</string>

    <string name="database_show">Database Content</string>
    <string name="database_clear">Clear Database</string>
    <string name="database_export">Export Database</string>
    <string name="clear_log">Clear Logs</string>"

    <string name="home_appName">APK Malware Agency</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">APK Malware Agency</string>
    <string name="nav_header_subtitle">GSU24IA03</string>
    <string name="nav_header_desc">Navigation header</string>


    <!--    menu options-->
    <string name="menu_home">Home</string>
    <string name="menu_hardware_status">Hardware Status</string>
    <string name="menu_cpu_mor">CPU Monitoring</string>
    <string name="menu_apk_scan">APK Scan</string>
    <string name="menu_db_show">Logs</string>"
    <string name="menu_about_us">About Us</string>
    <string name="menu_permission_list">Permission List</string>


    <!--    About us-->
    <string name="title1">This app was developed by five students of the last year of FPT University.\n\nThe institution’s staunch commitment to creating a nurturing learning environment and stimulating intellectual curiosity.</string>
    <string name="title2">This application was built to detect malicious APK files and should be useful for searching for possible malware on Android devices.</string>
    <string name="CLAMAV">Static analysis by ClamAV, an open-source antivirus engine, uses custom Yara rules signatures to detect corresponding patterns in APK files, such as string, textual, or binary patterns.</string>
    <string name="JADX">APK analysis with the Jadx open-source decompiler. To supplement the static analysis solution, we suggest deeper static analysis with Jadx, a powerful and versatile toolkit for decompiling Android applications.</string>
    <string name="ML">Use machine learning to enhance detection capabilities. Demonstrate the ability of machine learning to improve detection. Show understanding of algorithms used. \n\nConvolutional Neural Networks (CNNs) for Malware Detection.
\n\nConvolutional Neural Networks (CNNs) are leveraged to enhance the detection capabilities of the static analysis engine by analyzing patterns and features within APK files that may be indicative of malware.

\n\nModel Training: CNN models are trained on large datasets of known benign and malicious APK files. The training process involves feeding the models with extracted features and allowing them to learn patterns associated with malware.</string>


</resources>