<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.do_an.ui.home.HomePage"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@id/nav_apk_scan"
        android:name="com.example.do_an.ui.apk_scan.ScanAPK"
        android:label="@string/apk_scan_label"
        tools:layout="@layout/activity_apk_scan"/>
    <activity
        android:id="@+id/nav_database"
        android:name="com.example.do_an.ui.apk_scan.LogActivity"
        android:label="@string/database_label"
        tools:layout="@layout/activity_log"/>
    <activity
        android:id="@+id/nav_cpuInfo"
        android:name="com.example.do_an.ui.hardware.CpuInfo"
        android:label="@string/cpuInformation_label"
        tools:layout="@layout/activity_cpu_info"/>

    <fragment
        android:id="@+id/nav_hardware"
        android:name="com.example.do_an.ui.hardware.MonitoringHardware"
        android:label="@string/hardware_label"
        tools:layout="@layout/fragment_hardware_monitoring"/>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.do_an.ui.about_us.AboutUs"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>