<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apk_scan"
            android:icon="@drawable/scan_apk"
            android:title="@string/menu_apk_scan" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_results"
            android:title="@string/menu_db_show" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/team"
            android:title="@string/menu_about_us" />
    </group>

</menu>